--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -448,6 +448,17 @@ h3 {
   flex-direction: row;
   z-index: 1;
 }
+.header__menu {
+  display: none;
+}
+@media (max-width: 1481px) {
+  .header__menu {
+    width: 100%;
+    display: block;
+    height: 30px;
+    padding-top: 10px;
+  }
+}
 .header__content {
   width: 100%;
   display: flex;
@@ -457,6 +468,11 @@ h3 {
 }
 .header__nav-block {
   width: 39%;
+}
+@media (max-width: 1480px) {
+  .header__nav-block {
+    display: none;
+  }
 }
 .header__nav-block__nav__list {
   display: flex;
@@ -788,6 +804,7 @@ h3 {
   display: flex;
   justify-content: space-between;
   margin-bottom: 50px;
+  gap: 15px;
 }
 .footer__contacts-block__contacts {
   width: 100%;
